--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Test</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Artikelauswahl</string>
   <string name="category">Kategorie</string>
     <string name="search">Suchen</string>
 </resources>
