--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,15 @@
   <string name="category">Kategorie</string>
     <string name="search">Suchen</string>
     <string name="search_headline">Artikelsuche</string>
+    <string name="articelselecttitle">Was möchten Sie tun?</string>
+    <string-array name="articleselectchoice">
+        <item >Artikel auf Einkaufsliste setzen</item>
+        <item >Artikelstandort anzeigen</item>
+        <item >Abbruch</item>
+    </string-array>
+    <string name="detail_view_headline">Artikeldetail</string>
+    <string name="detail_view_name">Artikelname</string>
+    <string name="detail_view_standort">Standort</string>
+    <string name="detail_view_preis">Preis</string>
+    <string name="detail_view_beschreibung">Beschreibung</string>
 </resources>
