Add Images für Artikelbeschreibung

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="Warenkorb_add_title">Artikel hinzugefügt</string>
     <string name="einkaufsliste_headline">Einkaufsliste</string>
     <string name="title_activity_einkaufsliste">Einkaufsliste</string>
+    <string name="title_activity_map_actitivity">MapActitivity</string>
 
 </resources>
